<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FarmIndia</string>
    <string name="title_activity_registration">Registration Activity</string>
    <string name="farmer">Farmer</string>
    <string name="retailer">Retailer</string>
    <string name="fpi">FPI</string>
    <string name="sell">Sell Crop</string>
    <string name="chkretailer">Check Retailer</string>
    <string name="storage">Cold Storage</string>
    <string name="buycrop">buy crop</string>
    <string name="chkfarmer">check farmer</string>
    <string name="farmercrops">farmer Crops</string>
    <string name="cldstorage">cold storage</string>
    <string name="send">send</string>
    <string name="add">add</string>
    <string name="post">post</string>
    <string name="name">name</string>
    <string name="phoneNo">Phone No</string>
    <string name="age">Age</string>
    <string name="emailid">Email Id</string>
    <string name="govt">Authorized Person</string>
    <string name="action_settings">action settings</string>
    <string name="sellyourcrophere">SELL YOUR CROP HERE</string>
    <string name="vegitables">VEGITABLES</string>
    <string name="beans">Beans</string>
    <string name="beetroot">Beet Root</string>
    <string name="ladyfinger">Lady Finger</string>
    <string name="bittergourd">Bitter Gourd</string>
    <string name="bottlegourd">Bottle Gourd</string>
    <string name="brinjal">Brinjal</string>
    <string name="cabbage">Cabbbgae</string>
    <string name="capsicum">Capsicum</string>
    <string name="carrot">Carrot</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="chilli">Chilli</string>
    <string name="cucumber">Cucumnber</string>
    <string name="drumstickes">Drumsticks</string>
    <string name="flatbean">Flatbean</string>
    <string name="greenpea">Greenpea</string>
    <string name="hyacinthbeans">Hyacinthbean</string>
    <string name="lemon">lemon</string>
    <string name="mushroom">Mushroom</string>
    <string name="onion">Onion</string>
    <string name="potato">Potato</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="radish">Radish</string>
    <string name="rawbanana">Raw Banana</string>
    <string name="ridgegourd">Ridge Gourd</string>
    <string name="snakegourd">Snake Gourd</string>
    <string name="soyabean">Soyabean</string>
    <string name="taroroot">Taroroot</string>

    <string name="fruits">FRUITS</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="blueberry">Blueberry</string>
    <string name="blackberry">Blackberry</string>
    <string name="butterfruit">Butter fruit</string>
    <string name="carambola">Carambola</string>
    <string name="cherry">Cherry</string>
    <string name="grapes">Grapes</string>
    <string name="fig">Fig</string>
    <string name="guava">Guava</string>
    <string name="jackfruit">Jack Fruit</string>
    <string name="kiwifruit">Kiwi Fruit</string>
    <string name="mango">Mango</string>
    <string name="muskmelon">Muskmelon</string>
    <string name="orange">Orange</string>
    <string name="papaya">Papaya</string>
    <string name="pearfruit">Pear Fruit</string>
    <string name="pineapple">Pineapple</string>
    <string name="plum">Plum</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="spota">Spota</string>
    <string name="strawberry">Strawberry</string>
    <string name="watermelon">Watermelon</string>

    <string name="spices">Spices</string>
    <string name="asfoetida">Asfoetida</string>
    <string name="bayleaf">Bay Leaf</string>
    <string name="blackpepper">Blackpepper</string>
    <string name="browncardamom">Browncardamom</string>
    <string name="cardamom">Cardamom</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="caromseed">Caramseed</string>
    <string name="clove">Clove</string>
    <string name="corianderseed">Corianderseed</string>
    <string name="drychilli">Dry Chilli</string>
    <string name="garlic">Garlic</string>
    <string name="ginger">Ginger</string>
    <string name="mace">Mace</string>
    <string name="methiseed">Methi Seed</string>
    <string name="mustardseed">Mustsrd seed</string>
    <string name="nutmeg">Nutmeg</string>
    <string name="staranise">Staranise</string>
    <string name="tamarind">Tamarind</string>
    <string name="turmeric">Turmeric</string>

    <string name="pulses">Pulses</string>
    <string name="beatenrice">Beaten Rice</string>
    <string name="bengalgram">Bengal Gram</string>
    <string name="blackgram">Black Gram</string>
    <string name="brokenwheat">Broken Wheat</string>
    <string name="arhar">Arhar</string>
    <string name="channa">Channa</string>
    <string name="chawli">Chawli</string>
    <string name="greengram">Green Gram</string>
    <string name="groundnut">Ground Nut</string>
    <string name="horsegram">Horse Gram</string>
    <string name="kidneybean">Kidneybean</string>
    <string name="lentil">Lentil</string>
    <string name="pea">Pea</string>
    <string name="puffedrice">Puffed Rice</string>
    <string name="redgram">Red Gram</string>
    <string name="sesame">Sesame</string>

    <string name="cereals">Cereals</string>
    <string name="bajra">Bajra</string>
    <string name="barleyrice">barley Rice</string>
    <string name="maize">Maize</string>
    <string name="paddy">Paddy</string>
    <string name="ragi">Ragi</string>
    <string name="rice">Rice</string>
    <string name="sorgham">Sorgham</string>
    <string name="wheat">wheat</string>
    <string name="Graphs">Graphs</string>
    <string name="cropName">CROP NAME</string>
    <string name="cropVariety">CROP VARIETY</string>

</resources>