<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="40dp"
    android:id="@+id/content_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="farmindia.bmpl.com.farmindia.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:id="@+id/registeraton_name_edit_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/phoneNo"
        android:inputType="phone"
        android:id="@+id/registeration_phone_edit_text" />
    <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="20sp"
        android:id="@+id/age_registeration_edit_text"
         android:hint="@string/age"/>
<!--<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="horizontal">-->

        <!--<DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registeration_date_picker"
            android:datePickerMode="spinner"
            ></DatePicker>-->
      <!--<Spinner
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/registeration_day_spinner"
          android:layout_height="wrap_content"></Spinner>
      <Spinner
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/registeration_month_spinner"

          android:layout_height="wrap_content"></Spinner>
      <Spinner
          android:layout_width="0dp"
          android:layout_weight="1"
          android:id="@+id/registeration_year_spinner"
          android:layout_height="wrap_content"></Spinner>-->

<!--
</LinearLayout>
-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress"
        android:id="@+id/registeration_email_edit_text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center">
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#A3A30E"
        android:text="@string/farmer"
        android:id="@+id/farmer_button_registration"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/retailer"
            android:background="#A3A30E"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:id="@+id/retailer_button_registration"/>
    </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginBottom="15dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <Button
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/govt"
        android:background="#A3A30E"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/govt_button_registration"></Button>
</LinearLayout>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginBottom="15dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <Button
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/fpi"
        android:background="#A3A30E"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/fpi_button_registration"></Button>
</LinearLayout>

</LinearLayout>



